--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "Simple CRUD API using in-memory database underneath",
   "scripts": {
-    "start:dev": "nodemon",
+    "start:dev": "ts-node-dev --respawn --transpile-only ./src/index.ts",
     "start:prod": "tsc -p tsconfig.prod.json && node -r ts-node/register/transpile-only ./dist/src/index.js",
+    "start:multi": "cross-env MULTI_MODE=true ts-node-dev --respawn --transpile-only ./src/index.ts",
     "test": "jest --silent",
     "test:verbose": "jest --verbose"
   },
@@ -31,6 +32,7 @@
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
@@ -40,11 +42,11 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.7.0",
-    "nodemon": "^3.0.3",
     "prettier": "^3.2.5",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
